# pipegenie-test

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  ruff.toml
docs/source/: conf.py  index.rst  pipegenie.classification.rst  pipegenie.evolutionary.rst  pipegenie.exceptions.rst  pipegenie.grammar.rst  pipegenie.metrics.rst  pipegenie.model_selection.rst  pipegenie.regression.rst  pipegenie.rst
pipegenie/: __init__.py  _available_if.py  _classification_regression.py  base.py  pipeline.py  utils.py  voting.py
pipegenie/classification/: __init__.py  pipegenie_classifier.py
pipegenie/elite/: __init__.py  _elite.py
pipegenie/evolutionary/: __init__.py  _individual.py  crossover.py  mutation.py  replacement.py  selection.py
pipegenie/exceptions/: __init__.py  errors.py
pipegenie/grammar/: __init__.py  _grammar.py  parser.py
pipegenie/logging/: __init__.py  _logging.py  _stats.py
pipegenie/metrics/: __init__.py  _classification.py  _regression.py
pipegenie/model_selection/: __init__.py  _split.py
pipegenie/regression/: __init__.py  pipegenie_regressor.py
pipegenie/syntax_tree/: __init__.py  _encoding.py  _primitive_set.py
tests/: test_pipeline.py  test_utils.py  test_voting.py
tests/classification/: test_pipegenie_classifier.py
tests/data/: complete_grammar.ebnf  complete_grammar.xml  test_grammar.ebnf  test_grammar_adaboost.xml  test_grammar_adaboost_warning.xml  test_grammar_branch_classifier_mutation.xml  test_grammar_five_min_deriv.xml  test_grammar_fixed.xml  test_grammar_no_hp.xml  (+16 more)
tutorials/: change-grammar.md  classification_example.ipynb  regression_example.ipynb  sample-grammar-classification.xml  sample-grammar-regression.xml  sample-grammar-v2-2.xml  sample-grammar-v2.xml  understanding-outputs.md
(+24 files in other folders)
