
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipegenie"
version = "0.8.1"
description = "A Python package for generation and optimization of machine learning pipelines using an evolutionary algorithm"
readme = "README.md"
license = { text = "MIT License – HUMAINS Research Group Attribution Variant" }
authors = [
    { name = "HUMAINS Research Group", email = "info@pipegenie.org" }
]
dependencies = [
    "numpy>=1.26,<2",
    "loky>=3.4"
]
requires-python = ">=3.10,<3.13" # for Windows 3.12

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

keywords = ["machine learning", "pipeline", "generation", "optimization", "evolutionary algorithm"]

[tool.setuptools.packages.find]
include = ["pipegenie", "pipegenie.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pipegenie.classification" = ["assets/*.xml"]
"pipegenie.regression" = ["assets/*.xml"]

[project.urls]
Homepage = "http://pipegenie.org/"
Source = "https://github.com/PipeGenie/PipeGenie"
